--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,7 +1,11 @@
 play.http.secret.key = "changeme"
 
+play.i18n.langs = ["fr"] // add english when the translation is done
+
 slick.dbs.default.profile="slick.jdbc.MySQLProfile$"
 slick.dbs.default.db.driver = "com.mysql.jdbc.Driver"
 slick.dbs.default.db.url = "jdbc:mysql://localhost/jishop"
 slick.dbs.default.db.user = "root"
 slick.dbs.default.db.password = ""
+
+play.filters.headers.contentSecurityPolicy = "default-src 'self' https://maxcdn.bootstrapcdn.com;"
