--- a/conf/application.conf
+++ b/conf/application.conf
@@ -9,3 +9,17 @@ slick.dbs.default.db.user = "root"
 slick.dbs.default.db.password = ""
 
 play.filters.headers.contentSecurityPolicy = "default-src 'self' https://maxcdn.bootstrapcdn.com;"
+
+play.mailer {
+  host = "" // (mandatory)
+  port = 465 // (defaults to 25)
+  ssl = no // (defaults to no)
+  tls = no // (defaults to no)
+  tlsRequired = no // (defaults to no)
+  user = "" // (optional)
+  password = "" // (optional)
+}
+
+polyjapan {
+  siteUrl = ""
+}
