Remove views, implement jwt authentication, implement some api endpoints

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -23,3 +23,10 @@ play.mailer {
 polyjapan {
   siteUrl = ""
 }
+
+polybanking {
+  baseUrl = "https://polybanking.agepoly.ch"
+  configId = 12345
+  requestKey = ""
+
+}
