--- a/conf/application.conf
+++ b/conf/application.conf
@@ -9,6 +9,7 @@ slick.dbs.default.db.user = "root"
 slick.dbs.default.db.password = ""
 
 play.filters.headers.contentSecurityPolicy = "default-src 'self' https://maxcdn.bootstrapcdn.com;"
+play.modules.enabled += "ApplicationModule"
 
 play.mailer {
   host = "" // (mandatory)
@@ -22,6 +23,7 @@ play.mailer {
 
 polyjapan {
   siteUrl = ""
+  posterFile = "poster.jpg" // Make it 500KiB max
 }
 
 polybanking {
