Split controllers across multiple files

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -10,6 +10,7 @@ slick.dbs.default.db.password = ""
 
 play.filters.headers.contentSecurityPolicy = "default-src 'self' https://maxcdn.bootstrapcdn.com;"
 play.modules.enabled += "ApplicationModule"
+play.http.session.maxAge = 3 days
 
 play.mailer {
   host = "" // (mandatory)
