--- a/conf/application.conf
+++ b/conf/application.conf
@@ -12,6 +12,10 @@ play.filters.headers.contentSecurityPolicy = "default-src 'self' https://maxcdn.
 play.modules.enabled += "ApplicationModule"
 play.http.session.maxAge = 3 days
 
+play.filters {
+  enabled += "play.filters.cors.CORSFilter" # The thing that adds a Allow-Cross-Origin header
+}
+
 play.mailer {
   host = "" // (mandatory)
   port = 465 // (defaults to 25)
