--- a/conf/application.conf
+++ b/conf/application.conf
@@ -9,8 +9,8 @@ slick.dbs.default.db.user = "root"
 slick.dbs.default.db.password = ""
 
 play.filters.headers.contentSecurityPolicy = "default-src 'self' https://maxcdn.bootstrapcdn.com;"
-play.modules.enabled += "ApplicationModule"
 play.http.session.maxAge = 3 days
+play.http.errorHandler = play.api.http.JsonHttpErrorHandler
 
 play.filters {
   enabled += "play.filters.cors.CORSFilter" # The thing that adds a Allow-Cross-Origin header
