--- a/conf/application.conf
+++ b/conf/application.conf
@@ -31,6 +31,12 @@ polyjapan {
   posterFile = "poster.jpg" // Make it 500KiB max
 }
 
+jiauth {
+  clientId = ""
+  clientSecret = ""
+  baseUrl = ""
+}
+
 polybanking {
   baseUrl = "https://polybanking.agepoly.ch"
   configId = 12345
