--- a/conf/application.conf
+++ b/conf/application.conf
@@ -10,7 +10,8 @@ slick.dbs.default.db.password = ""
 
 play.filters.headers.contentSecurityPolicy = "default-src 'self' https://maxcdn.bootstrapcdn.com;"
 play.modules.enabled += "ApplicationModule"
-play.http.session.maxAge = 3 days
+play.http.session.maxAge = 5 minutes
+play.http.refreshToken.maxAge = 30 days
 
 play.filters {
   enabled += "play.filters.cors.CORSFilter" # The thing that adds a Allow-Cross-Origin header
