Allow user to upload images

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -30,12 +30,26 @@ play.mailer {
 polyjapan {
   siteUrl = ""
   posterFile = "poster.jpg" // Make it 500KiB max
+
+  images {
+    path = "/path/to/file"
+    url = "https://polyjapan.images/uploads/"
+  }
 }
 
 jiauth {
   clientId = ""
   clientSecret = ""
   baseUrl = ""
+}
+
+play.temporaryFile {
+  reaper {
+    enabled = true
+    initialDelay = "5 minutes"
+    interval = "30 seconds"
+    olderThan = "30 minutes"
+  }
 }
 
 polybanking {
