--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ scala:
 - 2.12.2
 script:
   - wget https://github.com/Polyjapan/ji-auth-framework/releases/latest/download/jiauthframework.jar
-  - mvn install:install-file -Dfile=jiauthframework.jar -DgroupId=ch.japanimpact -DartifactId=jiauthframework -Dversion=2.12-0.2-SNAPSHOT -Dpackaging=jar
+  - mvn install:install-file -Dfile=jiauthframework.jar -DgroupId=ch.japanimpact -DartifactId=jiauthframework_2.12 -Dversion=0.2-SNAPSHOT -Dpackaging=jar
   - sbt dist
   - sbt debian:packageBin
   - cp -rv target /tmp/
