--- a/conf/application.conf
+++ b/conf/application.conf
@@ -13,6 +13,8 @@ play.modules.enabled += "ApplicationModule"
 play.http.session.maxAge = 5 minutes
 play.http.refreshToken.maxAge = 30 days
 
+jwt.publicKeyPath = "https://auth.japan-impact.ch/.id.pub"
+
 play.filters {
   enabled += "play.filters.cors.CORSFilter" # The thing that adds a Allow-Cross-Origin header
 }
