Finally, we'll use CAS

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -19,6 +19,12 @@ play.filters {
   enabled += "play.filters.cors.CORSFilter" # The thing that adds a Allow-Cross-Origin header
 }
 
+cas {
+    hostname = "auth.japan-impact.ch" // the hostname (and port) of the CAS server
+    uri = "/cas/v2" // the base path of CAS on the given hostname
+    service = "shop.japan-impact.ch" // the hostname of the current service
+}
+
 play.mailer {
   host = "" // (mandatory)
   port = 465 // (defaults to 25)
