--- a/conf/application.conf
+++ b/conf/application.conf
@@ -10,8 +10,7 @@ slick.dbs.default.db.password = ""
 
 play.filters.headers.contentSecurityPolicy = "default-src 'self' https://maxcdn.bootstrapcdn.com;"
 play.modules.enabled += "ApplicationModule"
-play.http.session.maxAge = 5 minutes
-play.http.refreshToken.maxAge = 30 days
+play.http.session.maxAge = 1 days
 
 jwt.publicKeyPath = "https://auth.japan-impact.ch/.id.pub"
 
