--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,6 +1,21 @@
-play.http.secret.key = "changeme"
+## This file provides the default configuration. Please don't change it directly
+## Use production.conf for your overrides
+
+play.http.errorHandler = play.api.http.JsonHttpErrorHandler
 
 play.i18n.langs = ["fr"] // add english when the translation is done
+
+play.modules.enabled += "ApplicationModule"
+
+cas {
+    hostname = "auth.japan-impact.ch" // the hostname (and port) of the CAS server
+    uri = "/cas/v2" // the base path of CAS on the given hostname
+    service = "shop.japan-impact.ch" // the hostname of the current service
+}
+
+jwt.publicKeyPath = "https://auth.japan-impact.ch/.id.pub"
+
+uploads.baseUrl = "https://api.japan-impact.ch/uploads"
 
 slick.dbs.default.profile="slick.jdbc.MySQLProfile$"
 slick.dbs.default.db.driver = "com.mysql.jdbc.Driver"
@@ -9,64 +24,10 @@ slick.dbs.default.db.user = "root"
 slick.dbs.default.db.password = ""
 
 play.filters.headers.contentSecurityPolicy = "default-src 'self' https://maxcdn.bootstrapcdn.com;"
-play.modules.enabled += "ApplicationModule"
 play.http.session.maxAge = 1 days
-
-jwt.publicKeyPath = "https://auth.japan-impact.ch/.id.pub"
 
 play.filters {
   enabled += "play.filters.cors.CORSFilter" # The thing that adds a Allow-Cross-Origin header
-}
-
-cas {
-    hostname = "auth.japan-impact.ch" // the hostname (and port) of the CAS server
-    uri = "/cas/v2" // the base path of CAS on the given hostname
-    service = "shop.japan-impact.ch" // the hostname of the current service
-}
-
-play.mailer {
-  host = "" // (mandatory)
-  port = 465 // (defaults to 25)
-  ssl = no // (defaults to no)
-  tls = no // (defaults to no)
-  tlsRequired = no // (defaults to no)
-  user = "" // (optional)
-  password = "" // (optional)
-}
-
-polyjapan {
-  siteUrl = ""
-  posterFile = "poster.jpg" // Make it 500KiB max
-
-  images {
-    path = "/path/to/file"
-    url = "https://polyjapan.images/uploads/"
-  }
-}
-
-jiauth {
-  clientId = ""
-  clientSecret = ""
-  baseUrl = ""
-  appId = 1
-}
-
-uploads.
-
-play.temporaryFile {
-  reaper {
-    enabled = true
-    initialDelay = "5 minutes"
-    interval = "30 seconds"
-    olderThan = "30 minutes"
-  }
-}
-
-polybanking {
-  baseUrl = "https://polybanking.agepoly.ch"
-  configId = 12345
-  requestKey = ""
-  ipnKey = ""
 }
 
 play.http.parser.maxDiskBuffer = 1MB
