Migrate ClientsModel to anorm

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -19,9 +19,16 @@ uploads.baseUrl = "https://api.japan-impact.ch/uploads"
 
 slick.dbs.default.profile="slick.jdbc.MySQLProfile$"
 slick.dbs.default.db.driver = "com.mysql.jdbc.Driver"
-slick.dbs.default.db.url = "jdbc:mysql://localhost/jishop"
+slick.dbs.default.db.url = "jdbc:mysql://localhost/ji_shop"
 slick.dbs.default.db.user = "root"
 slick.dbs.default.db.password = ""
+
+db.default.profile="slick.jdbc.MySQLProfile$"
+db.default.driver = "com.mysql.jdbc.Driver"
+db.default.url = "jdbc:mysql://localhost/jishop"
+db.default.user = "root"
+db.default.password = ""
+
 
 play.filters.headers.contentSecurityPolicy = "default-src 'self' https://maxcdn.bootstrapcdn.com;"
 play.http.session.maxAge = 1 days
